--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 *{
     margin: 0;
     padding: 0;
@@ -282,5 +283,13 @@ les resolutions d'ecrans d'apres un petit script sass*/
 }
 
 
-
-
+input {
+    width: 500px;
+    height: 40px;
+    padding: 20px;
+    margin: 30px 0;
+    border: none;
+    outline: none;
+    background: #d5d5d5;
+    border-radius: 9999px;
+}
